<resources>
    <string name="app_name">优分享VR</string>
    <string name="app_name_inner">优分享VR</string>
    <string name="backward">后退</string>
    <string name="forward">前进</string>
    <string name="show_default">Default Show</string>
    <string name="show_randspin">Random Spin</string>
    <string name="show_touch">Touch Spin</string>
    <string name="select_file">Select Video</string>
    <string name="prev_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="fullscreen_cancel">取消</string>
    <string name="chapter_select">章节</string>
    <string name="full_screen">全屏</string>
    <string name="last_tab_not_close">不能关闭最后一个标签</string>
    <string name="back">返回</string>
    <string name="back_to_home">返回到桌面</string>
    <string name="last_img_not_del">不能删除最后一张图片</string>
    <string name="undo">撤消</string>
    <string name="redo">重做</string>
    <string name="add_text_node">添加</string>
    <string name="publish">发布</string>
    <string name="preview">预览</string>
    <string name="view">文章</string>
    <string name="setting_about_description">发现并分享</string>
    <string name="all_rights_reserved">Copyright © 2016 优分享 All Rights Reserved. </string>
    <string name="app_server_view">登陆参数配置</string>
    <string name="app_server_config_error_tips">请先进行登陆参数配置</string>
    <string name="confirm_down">确定下载该文件?</string>
    <string name="confirm_down_prefix">确定下载:\n</string>
    <string name="confirm">确认</string>
    <string name="pic_user">用户图片</string>
    <string name="add_friend">加朋友</string>
    <string name="add_focus">关注</string>
    <string name="user_info">用户信息</string>
    <string name="confirm_delete">确认删除</string>
    <string name="download">下载</string>
    <string name="download_start">下载开始</string>
    <string name="download_finish">下载完成</string>
    <string name="browser_add_bookmark">添加书签</string>
    <string name="copy_to_clicpboard_succ">已复制到剪贴板</string>
    <string name="browser_bookmark">书签</string>
    <string name="browser_history">历史</string>
    <string name="modifyfavorites">修改书签</string>
    <string name="deletefavorites">删除书签</string>
    <string name="deletehistory">删除历史</string>
    <string name="deleteAllHistory">清空历史</string>
    <string name="chapter">章节</string>
    <string name="modify_name">改名</string>
    <string name="browser_refresh">刷新</string>
    <string name="clip_board_empty">剪切板为空</string>
    <string name="open_link_not_url">粘贴为非链接转为搜索</string>
    <string name="browser_paste_open">粘贴打开</string>
    <string name="browser_settings">设置</string>
    <string name="browser_copy_link">复制链接</string>
    <string name="browser_download">下载</string>
    <string name="browser_share">截屏分享</string>
    <string name="browser_exit">退出</string>
    <string name="browser_load_home">加载主页</string>
    <string name="browser_home_set">设为主页</string>
    <string name="browser_hot_site">热门站点</string>
    <string name="browser_your_site">常访站点</string>
    <string name="browser_forward">分享到好友/群</string>
    <string name="browser_open_in__browseer">使用浏览器查看</string>
    <string name="browser_open_in_external_browseer">使用其他浏览器查看</string>
    <string name="browser_more">更多</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="browser_back">后退</string>
    <string name="browser_front">前进</string>
    <string name="browser_option">选项</string>
    <string name="browser_home">主页</string>
    <string name="browser_new_tab">窗口</string>
    <string name="browser_new_window">+窗口</string>
    <string name="browser_add_window">+窗口</string>
    <string name="browser_copy_window">复制窗口</string>
    <string name="browser_close_other_window">关闭其它</string>
    <string name="close">关闭</string>
    <string name="app_server_config">配置</string>
    <string name="app_login_auto">一键登陆</string>
    <string name="go_into">进入</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_web_search">网页搜索</string>
    <string name="update_time">更新于</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="head_photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="fill_empty"></string>
    <string name="youkes_number">优分享号:</string>
    <string name="youkes_number_search">优分享号</string>
    <string name="gender">性别</string>
    <string name="unknown">未知</string>
    <string name="sign">签名</string>
    <string name="sign_hint">请输入签名</string>
    <string name="hello_world">Hello world!</string>
    <string name="miui_font_family">miui</string>
    <string name="confirm_dialog_edittext_hint">说些什么</string>
    <string name="tab_view_name">EC_TAB_NAME</string>
    <string name="main_title">沟通</string>
    <string name="main_recommend">推荐</string>
    <string name="main_activities">动态</string>
    <string name="main_msg">消息</string>
    <string name="main_friend">朋友</string>
    <string name="main_users">用户</string>
    <string name="friend_circle">动态圈</string>
    <string name="friend_circle_real">朋友圈</string>
    <string name="friend_circle_position">朋友位置</string>
    <string name="visit_record">记录</string>
    <string name="activity_circle">动态圈</string>
    <string name="user_activities">动态</string>
    <string name="all_activities">所有用户动态</string>
    <string name="my_favorite">我的收藏</string>
    <string name="space">分享</string>
    <string name="space_my">我的分享</string>
    <string name="topic_circle">话题圈</string>
    <string name="creative_read">阅读</string>
    <string name="creative">创作</string>
    <string name="user">用户</string>
    <string name="hobby_circle">兴趣圈</string>
    <string name="hobby_circle_select">选择兴趣圈</string>
    <string name="topic_circle_select">选择话题圈</string>
    <string name="video_channel_select">选择视频频道</string>
    <string name="page_select_prompt">page_select_prompt</string>
    <string name="hint_chapter_go">跳到章节</string>
    <string name="chapter_jump">跳到章节</string>
    <string name="chapter_prev">前章</string>
    <string name="chapter_next">后章</string>
    <string name="server_error">服务器错误</string>
    <string name="page_prev">上页</string>
    <string name="page_next">下页</string>
    <string name="hint_search_article">下页</string>
    <string name="filter">筛选</string>
    <string name="focus">关注</string>
    <string name="focus_cancel">取消关注</string>
    <string name="read">阅读</string>
    <string name="novel">小说</string>
    <string name="comic">漫画</string>
    <string name="novel_add">添加小说</string>
    <string name="novel_add_chapter">添加章节</string>
    <string name="news">新闻</string>
    <string name="news_sufix">的新闻</string>
    <string name="news_my">我的新闻</string>
    <string name="video_upload">上传视频</string>
    <string name="video_movie_trailer">电影预告片</string>
    <string name="video_channel_videos">视频频道</string>
    <string name="footprint_upload">上传足迹</string>
    <string name="video_cloud_upload">上传视频到云盘</string>
    <string name="video_download">下载视频</string>
    <string name="video_upload_activity">上传视频到动态</string>
    <string name="video_my">我的视频</string>
    <string name="post_news">发布新闻</string>
    <string name="post_text">发文字</string>
    <string name="post_img">发图</string>
    <string name="post_video">发视频</string>
    <string name="post_article">发文</string>
    <string name="post_position">发位置</string>
    <string name="note_sufix">的文章</string>
    <string name="activites_my">我的</string>
    <string name="activites">动态</string>
    <string name="activites_reply">动态回复</string>
    <string name="city_name_py_short">城市名拼音首字母:北京bj上海sh</string>
    <string name="mdd_py_short">目的地拼音首字母:三亚sy 普吉岛pjd</string>
    <string name="topic_circle_name">话题圈名</string>
    <string name="topic_circle_my">我的话题圈</string>
    <string name="topic_my">我的话题</string>
    <string name="hint_text">文本</string>
    <string name="topic_circle_name_empty">话题圈名为空</string>
    <string name="main_contact">通讯录</string>
    <string name="map">地图</string>
    <string name="map_hint">地图:长按发布</string>
    <string name="map_near">附近地图</string>
    <string name="video">视频</string>
    <string name="book">图书</string>
    <string name="book_share">图书分享</string>
    <string name="movie_share">电影分享</string>
    <string name="buy">购买</string>
    <string name="share">分享</string>
    <string name="share_web_page_simple">分享</string>
    <string name="edit">编辑</string>
    <string name="get_video">视频</string>
    <string name="edit_web">编辑网页</string>
    <string name="get_videos">获取视频</string>
    <string name="manage">管理</string>
    <string name="edit_site_prefix">编辑站点:</string>
    <string name="share_movie_to_cirlce_completed">已经分享电影到动态圈</string>
    <string name="share_video_to_cirlce_completed">已经分享视频到动态圈</string>
    <string name="share_book_to_cirlce_completed">已经分享图书到动态圈</string>
    <string name="share_to_social">社交分享</string>
    <string name="start_vr">开始VR</string>
    <string name="share_to_qq_friend">分享给QQ朋友</string>
    <string name="share_to_qq_zone">分享到QQ空间</string>
    <string name="share_to_weixin_friend">分享给微信朋友</string>
    <string name="share_to_weixin_circle">分享到微信动态圈</string>
    <string name="post_article_circle">发文到动态</string>
    <string name="browser">浏览器</string>
    <string name="pubnumber">定阅号</string>
    <string name="more">更多</string>
    <string name="appstore">应用</string>
    <string name="pic">图片</string>
    <string name="goods">商品</string>
    <string name="site">站点</string>
    <string name="same_city">同城</string>
    <string name="campus">校园</string>
    <string name="travel">旅行</string>
    <string name="movie">电影</string>
    <string name="login_regist">注册</string>
    <string name="share_app">分享该应用</string>
    <string name="can_qq_bind_exist_user">绑定已有用户名或创建新用户</string>
    <string name="visitor_visit">游客访问</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_login">登 录</string>
    <string name="regist_regist">注册</string>
    <string name="qq_login_first">绑定并登录</string>
    <string name="regist_login">登 录</string>
    <string name="login_prompt_userId">用户名：</string>
    <string name="login_prompt_userPwd">密码：</string>
    <string name="login_prompt_userId_hint">请输入用户名</string>
    <string name="login_prompt_userPwd_hint">请输入密码</string>
    <string name="regist_prompt_userId_hint">至少6个小写字母或数字</string>
    <string name="regist_prompt_userPwd_hint">至少6个字符</string>
    <string name="regist_prompt_userRepwd_hint">与密码相同</string>
    <string name="regist_verify_hint">点击下方图片更换验证码</string>
    <string name="verify_code">验证码</string>
    <string name="regist_prompt_userRepwd">确认密码：</string>
    <string name="regist_prompt_verifyCode">验证码：</string>
    <string name="subscribe_number">订阅号</string>
    <string name="setting_voe">语音通话</string>
    <string name="setting_vie">视频通话</string>
    <string name="setting_other">其它</string>
    <string name="setting_vie_crop_key">setting_vie_crop_key</string>
    <string name="setting_vie_crop">画面裁剪</string>
    <string name="setting_vie_quality_key">setting_vie_quality_key</string>
    <string name="setting_vie_quality">视频清晰度</string>
    <string name="setting_vie_rotation_key">setting_vie_rotation_key</string>
    <string name="setting_vie_rotation">画面旋转</string>
    <string name="setting_vie_default_front_camera_key">setting_vie_default_front_camera_key</string>
    <string name="setting_vie_default_front_camera">默认前置摄像头</string>
    <string name="setting_other_server_record_audio_key">setting_other_server_record_audio_key</string>
    <string name="setting_other_server_record_audio">音频服务器录制</string>
    <string name="setting_other_server_record_video_key">setting_other_server_record_video_key</string>
    <string name="setting_other_server_record_video">视频服务器录制</string>
    <string name="setting_voe_call_proximity_key">setting_voe_call_proximity_key</string>
    <string name="setting_voe_call_proximity">通话期间关闭屏幕</string>
</resources>