<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:form="http://schemas.android.com/apk/res-auto"
    style="@style/NavPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userId"
                style="@style/CCPFormInputView"
                form:form_hint="@string/regist_prompt_userId_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_userId" />

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userPwd"
                style="@style/CCPFormInputView"
                android:inputType="textPassword"
                form:form_hint="@string/regist_prompt_userPwd_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_userPwd" />

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userRepwd"
                style="@style/CCPFormInputView"
                android:inputType="textPassword"
                form:form_hint="@string/regist_prompt_userRepwd_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/regist_prompt_userRepwd" />

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/verifyCode"
                style="@style/CCPFormInputView"
                android:inputType="textPassword"
                form:form_hint="@string/regist_verify_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/regist_prompt_verifyCode" />

            <LinearLayout
                android:id="@+id/image_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/regist_captcha_img"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/verify_code"
                    android:indeterminate="true"
                    android:indeterminateBehavior="repeat"
                    android:indeterminateDrawable="@drawable/common_loading4" />
            </LinearLayout>

            <Button
                android:id="@+id/regist_regist_btn"
                style="@style/CCPBigGreenButton"
                android:layout_marginTop="16dp"
                android:text="@string/regist_regist" />

            <Button
                android:id="@+id/regist_login_btn"
                style="@style/CCPBigWhiteButton"
                android:layout_marginTop="16dp"
                android:text="@string/regist_login" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>