<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:form="http://schemas.android.com/apk/res-auto"
    style="@style/NavPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userId"
                style="@style/CCPFormInputView"
                form:form_hint="@string/login_prompt_userId_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_userId" />

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userPwd"
                android:inputType="textPassword"
                style="@style/CCPFormInputView"
              	
                form:form_hint="@string/login_prompt_userPwd_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_userPwd" />

            <Button
                android:id="@+id/login_login_btn"
                style="@style/CCPBigGreenButton"
                android:layout_marginTop="16dp"
                android:text="@string/login_login" />
            
             <Button
                android:id="@+id/login_regist_btn"
                style="@style/CCPBigWhiteButton"
                android:layout_marginTop="16dp"
                android:text="@string/login_regist" />


            <Button
                android:id="@+id/visit_btn"
                style="@style/CCPBigWhiteButton"
                android:layout_marginTop="16dp"
                android:text="@string/visitor_visit" />

            <LinearLayout

                android:id="@+id/qq_login_btn"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                style="@style/CCPBigWhiteButton"
                android:layout_height="48.0dip">

                <ImageView
                    android:layout_margin="2dp"
                    android:layout_width="40dp"

                    android:layout_height="40dp"
                    android:src="@drawable/icon_qq"/>

                <TextView
                    android:textColor="@color/black_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_qq"
                    android:textSize="18dip"

                    />
            </LinearLayout>


            <Button
                android:id="@+id/share_app_btn"
                style="@style/CCPBigWhiteButton"
                android:layout_marginTop="16dp"
                android:text="@string/share_app" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>