<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:form="http://schemas.android.com/apk/res-auto"
    style="@style/NavPage"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/can_qq_bind_exist_user"
            />
        <LinearLayout
            android:background="@color/white_lighter"
            android:id="@+id/user_info_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"


            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="15dip"
            android:paddingTop="5dip" >

            <ImageView
                android:id="@+id/photo"
                android:layout_width="64dp"
                android:src="@drawable/icon"
                android:layout_height="64dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/nickname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="王旭明"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userId"
                style="@style/CCPFormInputView"
                form:form_hint="@string/regist_prompt_userId_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_userId" />

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userPwd"
                style="@style/CCPFormInputView"
                android:inputType="textPassword"
                form:form_hint="@string/regist_prompt_userPwd_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_userPwd" />

            <com.youkes.vr.ui.CCPFormInputView
                android:id="@+id/userRepwd"
                style="@style/CCPFormInputView"
                android:inputType="textPassword"
                form:form_hint="@string/regist_prompt_userRepwd_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/regist_prompt_userRepwd" />



            <Button
                android:id="@+id/qq_login_bind_btn"
                style="@style/CCPBigGreenButton"
                android:layout_marginTop="16dp"
                android:text="@string/qq_login_first" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>